--- a/my-website/css/home.css
+++ b/my-website/css/home.css
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>MFS - Modern Fact Stories</title>
     <style>
 :root {
@@ -72,8 +72,10 @@ body {
 }
 
 .navbar-logo img {
-  height: 32px;
-  width: auto;
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  object-fit: cover;
   transition: all 0.2s ease;
 }
 
